<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/DynRecipeName"
        android:layout_width="1117dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/RecipeName"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nextStepButton"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prevStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/PrevStepButton"
        android:textSize="34sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextStep"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/PrepTime"
        android:layout_width="78dp"
        android:layout_height="24dp"
        android:text="@string/PrepTime"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/DynRecipeName"
        app:layout_constraintTop_toBottomOf="@+id/DynRecipeName" />

    <TextView
        android:id="@+id/DynPrepTime"
        android:layout_width="43dp"
        android:layout_height="22dp"
        android:layout_marginStart="2dp"
        android:text="@string/DynPrepTime"
        app:layout_constraintBottom_toBottomOf="@+id/PrepTime"
        app:layout_constraintStart_toEndOf="@+id/PrepTime"
        app:layout_constraintTop_toBottomOf="@+id/DynRecipeName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/CookTime"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/DynPrepTime"
        app:layout_constraintTop_toBottomOf="@+id/DynRecipeName" />

    <TextView
        android:id="@+id/DynCookTime"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:text="@string/DynCookTime"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/DynRecipeName" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/BackButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/prevStep"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>