<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rhammock.recipebook.MainActivity">

    <TextView
        android:id="@+id/sectionTitle"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Recipes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/RecipeNameLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/recipePrepTime"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />

    <TextView
        android:id="@+id/recipePrepTime"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:layout_marginEnd="252dp"
        android:text="@string/PrepTime"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/recipeCookTime"
        app:layout_constraintTop_toTopOf="@+id/recipeName" />

    <TextView
        android:id="@+id/recipeCookTime"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginEnd="420dp"
        android:text="@string/CookTime"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipePrepTime" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeList"
        android:layout_width="1115dp"
        android:layout_height="531dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recipeName"
        app:layout_constraintTop_toBottomOf="@+id/recipeName"
        app:layout_constraintVertical_bias="0.174" />

</androidx.constraintlayout.widget.ConstraintLayout>